--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.43.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.0",
     "react": "^18.2.0",
