--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.43.2",
+    "@tanstack/react-router": "^1.32.12",
+    "@tanstack/router-devtools": "^1.32.12",
+    "@tanstack/router-vite-plugin": "^1.32.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.0",
