--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/router-devtools": "^1.32.12",
     "@tanstack/router-vite-plugin": "^1.32.10",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "lucide-react": "^0.378.0",
